--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">League of Legends</string>
+    
+    <!-- First entry screen -->
+    <string name="first_entry_choose_server_dialog_title">Choose server name:</string>
 </resources>
