fill profile ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="login_screen_summoner_name_hint">Enter summoner name</string>
     <string name="login_screen_server_name_hint">Enter server name</string>
     <string name="login_screen_button_login">Login</string>
+    <string name="login_progress_dialog_title">Loading</string>
+    <string name="login_progress_dialog_message">Wait and procrastinate…</string>
 
     <!-- Profile screen -->
     <string name="profile_summoner_name_label">Summoner name:</string>
